icons' color and text align are corrected

--- a/react-test/src/components/Footer.css
+++ b/react-test/src/components/Footer.css
@@ -30,6 +30,7 @@
 
 #copy-right p {
   color: var(--silver);
+  text-align: left;
 }
 
 #socials {
@@ -48,6 +49,7 @@
   margin-right: 1em;
   display: flex;
   align-content: center;
+  color: var(--white);
 }
 
 .footer-sections {
